tests/files/type_checker_tests/should_pass/161.cmdr
//Test that add set operation type checks
x = "hi";
x += "there";
