tests/files/type_checker_tests/should_fail/226.cmdr
//Should not string concatenate
x = 1;
x += "hi";